# rustclient

./: .gitignore  abc.js  article.txt  aspen.js  aspen.toml  dev.md  index.html  installs.js  package.json  pnpm-lock.yaml  sample.tsx  schema.d.ts  tailwind.config.js  tsconfig.json  turbo.json  websocket_impl.txt
apps/backend/: Cargo.toml  package.json  tauri.conf.json
apps/backend/.turbo/daemon/: cb0174ab4b9b91bf-turbo.log.2024-05-12  cb0174ab4b9b91bf-turbo.log.2024-05-16  cb0174ab4b9b91bf-turbo.log.2024-05-20  cb0174ab4b9b91bf-turbo.log.2024-05-25  cb0174ab4b9b91bf-turbo.log.2024-05-26  cb0174ab4b9b91bf-turbo.log.2024-05-27  cb0174ab4b9b91bf-turbo.log.2024-05-28  cb0174ab4b9b91bf-turbo.log.2024-05-29  cb0174ab4b9b91bf-turbo.log.2024-05-31
apps/backend/src/: main.rs  system.rs
apps/frontend/: README.md  components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/src/: MainRoutes.tsx  Routes.tsx  hideScrollbar.css  main.tsx  styles.css
apps/frontend/src/components/: combo-box.tsx  custom-sidebar.tsx  horizontalScroll.tsx  json-viewer.tsx
apps/frontend/src/components/Dashboard/: index.tsx  sidebar.tsx
apps/frontend/src/config/: navigation.ts
apps/frontend/src/hooks/: useParseUrl.tsx
scripts/: move-binary.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: custom-tab.tsx  http-view.tsx  icons.tsx  sidebar.tsx
src/components/ui/: select.tsx  tabs.tsx  textarea.tsx
src/context/: requestCtx.ts
src/hooks/: useAxios.tsx
(+4 files in other folders)
